# ELOC

./: .gitignore  README.md  gantry_control.py  state_machine.py
camera_calibration/: camera_calibration.py  camera_images.py
camera_calibration/data/: cam_mtx.npy  dist.npy
firmware/WPT_Receiver/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/WPT_Receiver/main/: CMakeLists.txt  WPT_Receiver.c
firmware/WPT_Transmitter/: CMakeLists.txt  sdkconfig  sdkconfig.old
firmware/WPT_Transmitter/main/: CMakeLists.txt  WPT_Transmitter.c  console.c  console.h  inverter.c  inverter.h  v_sense.c  v_sense.h
firmware/lv_controller/: CMakeLists.txt  sdkconfig
firmware/lv_controller/include/: commands.h  limit_switches.h  lv_controller.h  motor.h  nfc_module.h  ring_light.h  solenoid.h  state_machine.h
firmware/lv_controller/main/: CMakeLists.txt  commands.c  limit_switches.c  lv_controller.c  motor.c  nfc_module.c  ring_light.c  solenoid.c  state_machine.c
gantry_control/: gantry_arm.py
hardware/ELOC_Receiver/: ELOC_Receiver.PrjPcb  ELOC_Receiver.PrjPcbStructure  ELOC_Receiver_BOM.xlsx  Power.SchDoc  Processor.SchDoc  Rectifier.SchDoc  receiver_board_outline.dxf
hardware/ELOC_Receiver/Project Outputs for ELOC_Receiver/: Design Rule Check - ELOC_Receiver.drc  Design Rule Check - ELOC_Receiver.html
hardware/ELOC_Transmitter/: ELOC_Transmitter.PrjPcb  ELOC_Transmitter.PrjPcbStructure  ELOC_Transmitter_BOM.xlsx  Full_Bridge_Inverter.SchDoc  Power.SchDoc  Processor.SchDoc  transmitter_board_outline.dxf
marker_detection/: aruco_detection.py
(+61 files in other folders)
